--- a/.github/workflows/update-deployed-addresses.yml
+++ b/.github/workflows/update-deployed-addresses.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         repository: otimlabs/otim-protocol
         
-    - name: Collect environment files
+    - name: Collect protocol environment settings
       id: collect-env
       run: |
         # Collect all environment files for processing
@@ -38,56 +38,31 @@ jobs:
         EOF
         EOF
         
-    - name: Setup address MDX template
+    - name: Setup contract address MDX template
       id: setup-template
       run: |
+        # Read template file and store as output
         cat <<EOF >> $GITHUB_OUTPUT
         template<<EOF
-        ---
-        title: "Contract Addresses"
-        sidebarTitle: "Contract Addresses"
-        ---
-        <Tabs>
-          <Tab title="[NETWORK]">
-            ## Core Contracts
-            
-            | Name | Address |
-            | :--- | :--- |
-            | \`[ContractName]\` | \`[ADDRESS]\` |
-
-            ## Action Contracts
-
-            <Tabs>
-              <Tab title="[CHAIN_NAME]">
-                | Name | Address |
-                | :--- | :--- |
-                | \`[ContractName]\` | \`[ADDRESS]\` |
-              </Tab>
-              <!-- Repeat <Tab> for each chain -->
-            </Tabs>
-            
-          </Tab>
-          <!-- Repeat <Tab> for both Mainnet and Testnet -->
-        </Tabs>
+        $(cat .github/templates/deployed-addresses.mdx.tmpl)
         EOF
         EOF
 
-  call-openai:
+  submit-prompt:
     runs-on: ubuntu-latest
     needs: setup-prompt
     outputs:
-      mdx-content: ${{ steps.call-api.outputs.content }}
+      mdx-content: ${{ steps.submit-prompt.outputs.content }}
     
     steps:
-    - name: Call OpenAI API
-      id: call-api
+    - name: Submit prompt to OpenAI
+      id: submit-prompt
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        # System prompt
-        SYSTEM_PROMPT="Generate clean, properly formatted MDX content for contract addresses. ALWAYS sort contract names alphabetically within each table for consistency."
+        SYSTEM_PROMPT="Generate MDX content for contract addresses from environment variables."
         
-        # User prompt
+        ###
         USER_PROMPT="Generate MDX content following this template:
 
         ${{ needs.setup-prompt.outputs.template }}
@@ -97,34 +72,41 @@ jobs:
         ${{ needs.setup-prompt.outputs.environment-data }}
 
         Requirements:
-        - Collect all non-token contract addresses (no owner/deployer addresses)
+        - Extract non-token contract addresses (no owner/deployer)
         - Convert envvar (CONTRACT_NAME_ADDRESS) to ContractName format
-        - Group core contracts (e.g. Gateway, OtimDelegate, InstructionStorage, FeeTokenRegistry, Treasury and ActionManager) under Core Contracts
-        - Group action contracts (contain ACTION at end of envvar) under Action Contracts with chain tabs
-        - Sort all contract names alphabetically within each table
-        - Do NOT create chain tabs for .env-otim-* files (they contain shared core contracts)"
+        - Group core contracts (Gateway, OtimDelegate, InstructionStorage, FeeTokenRegistry, Treasury, ActionManager) under Core Contracts
+        - Group action contracts under Action Contracts with chain tabs
+        - Include common action contracts from .env-otim-* files in ALL chain tabs within each network (Mainnet/Testnet)
+        - Do NOT create chain tabs for .env-otim-* files (they contain shared core contracts)
+        - Output pure MDX content without code block wrappers (no \`\`\`mdx)"
+        ###
+
+        # Create JSON payload file
+        cat > /tmp/openai_payload.json << EOF
+        {
+          "model": "gpt-4o",
+          "messages": [
+            {"role": "system", "content": "$SYSTEM_PROMPT"},
+            {"role": "user", "content": "$USER_PROMPT"}
+          ],
+          "max_tokens": 6000,
+          "temperature": 0
+        }
+        EOF
 
         # Call API and store output
         curl -s "https://api.openai.com/v1/chat/completions" \
           -H "Content-Type: application/json" \
           -H "Authorization: Bearer $OPENAI_API_KEY" \
-          -d "{
-            \"model\": \"gpt-4o\",
-            \"messages\": [
-              {\"role\": \"system\", \"content\": \"$SYSTEM_PROMPT\"},
-              {\"role\": \"user\", \"content\": \"$USER_PROMPT\"}
-            ],
-            \"max_tokens\": 4000,
-            \"temperature\": 0
-          }" | jq -r '.choices[0].message.content' | cat <<EOF >> $GITHUB_OUTPUT
+          -d @/tmp/openai_payload.json | jq -r '.choices[0].message.content' | cat <<EOF >> $GITHUB_OUTPUT
         content<<EOF
         $(cat)
         EOF
         EOF
 
-  write-mdx:
+  process-prompt-result:
     runs-on: ubuntu-latest
-    needs: call-openai
+    needs: submit-prompt
     
     steps:
     - name: Checkout docs repository
@@ -133,7 +115,7 @@ jobs:
     - name: Write MDX content
       run: |
         # Write the generated content to the MDX file
-        echo "${{ needs.call-openai.outputs.mdx-content }}" > docs/developers/deployed-addresses.mdx
+        echo "${{ needs.submit-prompt.outputs.mdx-content }}" > docs/developers/deployed-addresses.mdx
         
     - name: Create PR for address updates
       uses: peter-evans/create-pull-request@v7
