--- a/.github/workflows/mintlify-validate.yml
+++ b/.github/workflows/mintlify-validate.yml
@@ -15,10 +15,10 @@ jobs:
           node-version: '20'
 
       - name: Install Mintlify CLI
-        run: npm install -g mintlify
+        run: npm install -g mint
 
       - name: Check for broken links
-        run: mintlify broken-links
+        run: mint broken-links
 
       - name: Validate OpenAPI spec
-        run: mintlify openapi-check api-reference/openapi.yaml 
+        run: mint openapi-check api-reference/openapi.yaml 
